sample/error/e02803.asn
E02803 DEFINITIONS ::=
BEGIN
    Cho ::= CHOICE {
        item1   INTEGER,
        item2   INTEGER     -- E02803
    }
END
